--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         </div>
     </section>
 
-    <section class="background-price">
+    <section id="background-price">
         <h2>IL TUO BIGLIETTO</h2>
-        <div class="container-price">
+        <div class="container-price hidden">
             <h3 class="title-passengers">DETTAGLIO PASSEGGERI</h3>
             <hr>
             <div class="row">
@@ -51,15 +51,15 @@
                 </div>
                 <div class="test">
                     <p class="description"><strong>Offerta</strong></p>
-                    <p id="name">Biglietto Standard</p>  
+                    <p id="biglietto"></p>  
                 </div>
                 <div class="test">
                     <p class="description"><strong>Carrozza</strong></p>
-                    <p id="carrozza">5</p>  
+                    <p id="carrozza"></p>  
                 </div>
                 <div class="test">
                     <p class="description"><strong>Codice CP</strong></p>
-                    <p id="code-cp">96025</p>  
+                    <p id="code-cp"></p>  
                 </div>
                 <div class="test">
                     <p class="description"><strong>Costo biglietto</strong></p>
